add easy task 1 for 10.03.25